--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,4 +1,4 @@
-#RewriteEngine On
+RewriteEngine On
 
 # If we receive a forwarded http request from a proxy...
 #RewriteCond %{HTTP:X-Forwarded-Proto} =http [OR]
